# llm-lambda-labs

./: README.md  llm_lambda_labs.py  pyproject.toml
tests/: test_lambda_labs.py
tests/cassettes/test_lambda_labs/: test_async_prompt[False].yaml  test_async_prompt[True].yaml  test_prompt.yaml  test_prompt[False].yaml  test_prompt[True].yaml
